--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,12 @@ picture {
   color: var(--Grey);
 }
 
+#email:focus {
+  outline-color: var(--Dark-Slate-Grey);
+  outline-width: 1px;
+  outline-style: solid;
+}
+
 .wrong-email {
   background-color: hsla(14, 100%, 62%, 0.15);
   box-shadow: inset 0 0 0 1px var(--Tomato) !important;
